--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,6 @@
 <IfModule mod_expires.c>
-  ExpiresActive On
-  ExpiresByType text/html "access plus 0 seconds"
-</IfModule>
-
-<IfModule mod_headers.c>
-  Header set Cache-Control "no-cache, no-store, must-revalidate"
-  Header set Pragma "no-cache"
-  Header set Expires 0
+  ExpiresActive On ExpiresDefault "access plus 1 month" ExpiresByType text/html
+  "access plus 0 seconds" ExpiresByType text/css "access plus 1 week"
+  ExpiresByType text/javascript "access plus 1 week" ExpiresByType image/webp
+  "access plus 1 year" ExpiresByType image/png "access plus 1 year"
 </IfModule>
